--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@3rdweb/sdk": "^1.42.1",
     "@datadog/browser-rum": "^4.30.1",
     "@davatar/react": "^1.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
