--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@3rdweb/sdk": "^1.42.1",
+    "@chakra-ui/react": "^2.8.0",
     "@datadog/browser-rum": "^4.30.1",
     "@davatar/react": "^1.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
