--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toggle-group": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.2",
     "@rainbow-me/rainbowkit": "^0.12.2",
+    "@react-icons/all-files": "^4.1.0",
     "@reservoir0x/reservoir-kit-ui": "0.13.3",
     "@thirdweb-dev/react": "^2.6.0-1",
     "@thirdweb-dev/sdk": "^3.10.28",
