--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@reservoir0x/reservoir-kit-ui": "0.13.3",
     "@solana/wallet-adapter-react": "^0.15.33",
+    "@thirdweb-dev/chain-icons": "^1.0.5",
     "@thirdweb-dev/react": "^2.6.0-1",
     "@thirdweb-dev/sdk": "^3.10.28",
     "dayjs": "^1.11.6",
